@startuml
hide empty members

class TechnicalVisitReport {
  String id
  String technicianId
  String technicianName
  DateTime date
  String clientName
  String location
  String projectManager
  List<String> technicians
  String accompanyingPerson
  String projectContext
  List<Floor> floors
  String conclusion
  int estimatedDurationDays
  List<String> assumptions
  String status
  DateTime createdAt
  DateTime submittedAt
  DateTime lastModified
}

class Floor {
  String id
  String name
  List<NetworkCabinet> networkCabinets
  List<Perforation> perforations
  List<AccessTrap> accessTraps
  List<CablePath> cablePaths
  List<CableTrunking> cableTrunkings
  List<Conduit> conduits
  List<CopperCabling> copperCablings
  List<FiberOpticCabling> fiberOpticCablings
  String notes
}

class Component {
  String id
  String location
  String notes
}

class NetworkCabinet extends Component {
  String name
  String cabinetState
  bool isPowered
  int availableOutlets
  int totalRackUnits
  int availableRackUnits
}

class Perforation extends Component {
  String wallType
  double wallDepth
  String wallSounding
  String perforationAccess
  String perforationConstraints
}

class CablePath extends Component {
  String size
  double lengthInMeters
  String fixationType
  bool isVisible
  bool isInterior
  double heightInMeters
}

TechnicalVisitReport "1" *-- "many" Floor
Floor "1" *-- "many" Component
@enduml